Fix Github Liquid Tag alignment in notifications page (#4270) [ci skip]

--- a/app/assets/stylesheets/ltags/GithubTag.scss
+++ b/app/assets/stylesheets/ltags/GithubTag.scss
@@ -8,7 +8,6 @@
     margin: 0 0 0.7em;
     @media screen and (min-width: 500px) {
       word-wrap: break-word;
-      margin-left: -20px;
       margin-bottom: 10px;
     }
     a {
